@@ -9,7 +9,8 @@ import string
 import sys
 
 # The directory to hold the translated and menuified tree.
-outdir = '/tmp'
+outdir = '/var/www'
+verbose = 0
 
 LANGUAGES = (
 	('site', 'English'),
@@ -34,180 +35,60 @@ NOTES
 * Do not use absolute URL locations.  That breaks local installs
   of the website.  Rather, use '../' * depth to get to the root.
 
-* The handling of the Home > url is completely ugh.
 '''
 
+PAGE_TEMPLATE = '''@MAIN@'''
 
-
-# Ugh, move to .ihtml.
-
-header = '''<HTML><!-- Generated by format-page.py; changes will be lost. !-->
-<HEAD>
-<TITLE>%(title)s</TITLE>
-<LINK REL="stylesheet" TYPE="text/css" HREF="%(depth)snewweb.css">
-<LINK REL="shortcut icon" HREF="%(depth)simages/shortcut.png">
-%(script)s
-</HEAD>
-<BODY>
+LANGUAGES_TEMPLATE = '''\
+<P class="location">%s</P>
 '''
 
-top_script = '''<SCRIPT>
+# ugh, move to .ithml
+top_script = '''\
+<SCRIPT>
   <!--
     function setfocus ()
-        {
-          document.f_lily_google.brute_query.focus ();
-        }
+      {
+        document.f_lily_google.brute_query.focus ();
+      }
     // !-->
-</SCRIPT>
+  </SCRIPT>
 '''
 
-main_template = '''<DIV class="main">
-<HR>
-%s
-<br clear=all>
-<HR>
-</DIV>
-'''
-
-footer = '''
-</BODY>'''
-
-
-menu_template = '''<DIV class="menu">
-%s
-</DIV>
-'''
-
-button_row_template = '''
-<TABLE
- cellpadding="0"
- cellspacing="0"
-><TR>%(buttonrow)s</TR></table>'''
-
-button_row_spacer = '''<TABLE width="100%%"
- cellpadding="1"
- cellspacing="0">
-<tr><td class=menuactive></td></tr>
-</TABLE>
-<TABLE width="100%%"
- cellpadding="1"
- cellspacing="0">
-<tr><td></td></tr>
+MENU_TEMPLATE = '''\
+<TABLE cellpadding="0" cellspacing="0">
+  <TR>%s</TR>
 </TABLE>
 '''
 
-location_template = '''<p class="location">
-%s
-</p>
+MENU_SEP = '''\
+<TABLE width="100%" cellpadding="1" cellspacing="0">
+  <TR>
+    <TD class="menuactive"></TD>
+  </TR>
+</TABLE>
+<TABLE width="100%" cellpadding="1" cellspacing="0">
+  <TR>
+    <TD></TD>
+  </TR>
+</TABLE>
 '''
 
-# don't use mouseover magic as long as we don't have button images
-
-## don't break line after > 
-button_template = '''
-<TD class="%(class)sleftedge" width=1>
-</td>
-<TD class="%(class)s">
-%(contents)s
-</TD><TD class="%(class)srightedge" width=1>
-</td>
+MENU_ITEM = '''\
+<TD class="%%(css)sleftedge" width="1"></TD>
+<TD class="%%(css)s">%s</TD>
+<TD class="%%(css)srightedge" width="1"></TD>
 '''
 
-#
-button_active_template = '''<TD class="%(class)s"><A href="%(url)s"
->
-%(text)s</A></TD>'''
+MENU_ITEM_INACTIVE = MENU_ITEM \
+		     % '<A class=%(css)s" href="%(url)s">%(name)s</A>'
+MENU_ITEM_ACTIVE = MENU_ITEM \
+		   % '<A class="%(css)s" href="%(url)s">[%(name)s]</A>'
 
+LOCATION_ITEM = '<a href="%(url)s">[%(name)s]</a>'
+LOCATION_SEP = ' &gt; '
 
-def read_menu (f):
-	# be safe, use output dict = {}
-	menu = eval (open (f).read (), __main__.__dict__, {})
-	nm = []
-	for (file, link) in menu:
-		if file[-1] == '/':
-			file = file[:-1]
-		nm.append ((file, link))
-
-	return nm
-
-
-def one_tab (depth, file):
-	'''
-	Return the menu to put at the top, and
-	the label that you for the > > > bars at the bottom.
-
-
-	TODO:
-	use a dict in menu-entries.py for pages without menu at the top
-	(eg. page 1, .. , page 12)
-	'''
-	
-	(dir, here) = os.path.split (file)
-
-	site_dir = string.join (['site'] + string.split (dir, '/')[1:], '/')
-	menu_file = os.path.join (site_dir, 'menu-entries.py')
-	# use gettext rather than copied and translated menu-py files.
-	#if not os.path.exists (menu_file):
-	#menu_file = os.path.join (dir, 'menu-entries.py')
-	if not os.path.exists (menu_file):
-		if re.search ('index.html$', file):
-			return ('', '')
-		else:
-			base = os.path.splitext (here)[0]
-			return ('', base)
-	
-	menu = read_menu (menu_file)
-	here_label = filter (lambda x: x[0] == here, menu)
-
-	if not here_label:
-		here_label = ''
-	else:
-		here_label = here_label[0][1]
-
-		
-	def entry_to_label (x):
-		(file, label) = x
-		name = re.sub ("['! ]", '-', label)
-		active = 1
-
-		button_dict =  {
-			'url' : '../' * depth + file,
-			'name' : name,
-			'text' : label,
-			'root' : '../' * depth
-		}
-		
-		if file == here:
-			active = active and (depth > 0)
-
-			button_dict['class'] =  "menuactive"
-			button_dict['text'] = '[<b>%s</b>]' % button_dict['text']
-		else:
- 			button_dict['class'] = "menu"
-
-		contents = '<A href="%(url)s">%(text)s</A>' % button_dict
-		button_dict['contents'] = contents
-
-		button = button_template % button_dict
-		return button
-
-	labels = []
-	toprow = []
-	for m in menu:
-		# ugh.
-		labels.append (entry_to_label (m))
-		if m[1] == _ ('Home'):
-			labels.append ('<td class="menuunclickable"><b>&gt;</b></td>')
-
-	# FIXME
-	
-	menu_str = button_row_template % {
-		'buttonrow' : string.join (labels, ''),
-	}
-	if depth> 0 or here_label:
-		menu_str = menu_str + button_row_spacer % {} 
-
-	return (menu_str, here_label)
+LOCATION_TITLE = 'LilyPond - %s'
 
 
 def dir_lang (file, lang):
@@ -222,83 +103,106 @@ def file_lang (file, lang):
 	return base + ext
 
 
-def do_one_file (in_file_name, out_file_name, lang):
-	(dir, here) = os.path.split (in_file_name)
+def rreverse (lst):
+	list.reverse (lst)
+	return lst
 
-	here_dir = dir
-	if os.path.isdir (in_file_name):
-		here_dir = in_file_name
 
-	try:
-		os.makedirs (os.path.dirname (out_file_name))
-	except:
-		OSError
-		
-	html = open (in_file_name).read ()
-	
-	file_name = in_file_name
+def format_page (html, file_name, lang):
+	class dir_entry:
+		def __init__ (self, dir, up):
+			self.name = dir
+			self.up = up
+
+	def list_directories (dir, up):
+		if not dir:
+			return []
+		return [dir_entry (dir, up)] \
+		       + list_directories (os.path.split (dir)[0], up + 1)
+
+	dir = os.path.dirname (file_name)
+	directories = list_directories (dir, 0)
+
 	base_name = os.path.basename (file_name)
-	base = os.path.splitext (file_name)[0]
-	if lang != 'site':
-		base = os.path.splitext (base)[0]
+	is_index = base_name == 'index.html'
+	depth = len (directories)
 
-	is_index = re.search ('index.html$', file_name)
+	dir_split = rreverse (string.split (dir, '/'))
+	def is_active (dir_entry, url):
+		return (url == dir_split[dir_entry.up - 1] \
+			or os.path.join (dir_entry.name, url) == file_name)
 
-	depth = 0
-	tabs = []
-	locations = []
-	x = file_name
-	while 1:
-		(dir, here) = os.path.split (x)
-		if os.path.exists (os.path.join (dir, 'GNUmakefile')):
-			break
-		(menu, here_label) = one_tab  (depth, x)
-		if menu:
-			tabs.append (menu)
-		if here_label:
-			locations.append (here_label)
-		x = dir
-		depth += 1
+	def get_menu (d):
+		f = os.path.join (dir_lang (d, 'site'), 'menu-entries.py')
+		
+		if os.path.isfile (f):
+			menu = eval (open (f).read (), __main__.__dict__, {})
+		else:
+			menu = [('', os.path.splitext (d)[0]),]
+		return menu
 
-	tabs.reverse ()
-	locations.reverse ()
+	class item:
+		def __init__ (self, dir_entry, menu_entry):
+			URL = 0
+			NAME = 1
+			self.is_active = is_active (dir_entry, menu_entry[URL])
+			self.up = dir_entry.up
+			self.url = menu_entry[URL]
+			self.name = menu_entry[NAME]
 
-	# UGH.
-	if locations != [_ ('Home')]:
-		locations = [_ ('Home')] + locations
-	else:
+	def directory_menu (dir_entry):
+		return map (lambda x: item (dir_entry, x),
+			    get_menu (dir_entry.name))
+	
+	listings = map (directory_menu, directories)
+
+	def location_menu (dir_entry):
+		active = filter (lambda x: is_active (dir_entry, x[0]),
+				 get_menu (dir_entry.name))
+		return map (lambda x: item (dir_entry, x), active)
+
+	locations = filter (lambda x: x, map (location_menu, directories))
+	locations = rreverse (map (lambda x: x[0], locations))
+
+	is_root = is_index and depth == 1
+	if is_root:
 		locations = []
+	else:
+		home = item (dir_entry (lang, depth - 1), ('.', _ ("Home")))
+		locations = [home] + locations
 
-	nav_elts = []
-	d = len (locations) - 1
-	
-	for l in locations:
-		if d == 0:
-			l = '[<b>%s</b>]' % l
+	def itemize (item, css, ACTIVE, INACTIVE):
+		is_active = item.is_active
+		name = item.name
+		url = '../' * item.up + item.url
+		if item.is_active:
+			css += 'active'
+			s = ACTIVE
+		else:
+			s = INACTIVE
+		return s % vars ()
 
-		loc = ''
-		if is_index:
-			loc = '../' * d
-		elif d == 1:
-			loc = './'
-		elif d > 1:
-			loc = '../' * (d-1)
+	def menuitemize (item):
+		return itemize (item, 'menu',
+				MENU_ITEM_ACTIVE, MENU_ITEM_INACTIVE)
 
-		nav_elts.append ("<a href=%s>%s</a>" % (loc, l))
-		d -= 1
-	
-	nav_str = string.join (nav_elts, ' &gt; ')		
-	nav_title = 'LilyPond - ' + string.join (locations[1:], ' - ')
-	
-	menu = menu_template % string.join (tabs)
-	nav_str = location_template % nav_str
-	main = main_template % html
-	depth_str = ('../' * (depth - 1))
+	menus = map (lambda x: map (menuitemize, x), listings)
+	menu_strings = map (lambda x: MENU_TEMPLATE % string.join (x),
+			    menus)
+	menu = string.join (rreverse (menu_strings), MENU_SEP)
 
-	## AT substitutions.
+	def locationize (item):
+		return itemize (item, 'location',
+				LOCATION_ITEM, LOCATION_ITEM)
 
-	titles = [nav_title]
-	
+	location = string.join (map (locationize, locations), LOCATION_SEP)
+	location_title = LOCATION_TITLE % string.join (map (lambda x: x.name,
+							    locations[1:]),
+						       ' - ')
+
+	## @AT@ substitutions.
+
+	titles = [location_title]
 	def grab_title (match):
 		titles.append (match.group (1))
 		return ''
@@ -314,38 +218,50 @@ def do_one_file (in_file_name, out_file_name, lang):
 	def grab_gettext (match):
 		return gettext (match.group (1))
 
-	main = re.sub ('<title>(.*?)</title>', grab_title, main)
-	main = re.sub ('@DEPTH@', depth_str, main)
-	main = re.sub ('@DOC@', os.path.join (depth_str, '../doc/'),
-		       main)
-	main = re.sub ('@IMAGES@', os.path.join (depth_str, 'images/'),
-		       main)
-	main = re.sub ('@([-A-Za-z]*.ihtml)@', grab_ihtml, main)
-	main = re.sub ('_@([^@]*)@', grab_gettext, main)
-	main = re.sub ('\$\Date: (.*) \$', '\\1', main)
+	root_url = '../' * (depth - 1)
+	main = re.sub ('<title>(.*?)</title>', grab_title, html)
 
-	script = ''
-	if is_index and depth == 1:
+	if is_root:
 		script = top_script
+	else:
+		script = ''
 
-	rel_name = string.join (string.split (in_file_name, '/')[1:], '/')
+	page_template = PAGE_TEMPLATE
+	f = os.path.join (dir_lang (dir, 'site'), 'template.ihtml')
+	if dir != lang and os.path.isfile (f):
+		page_template = open (f).read ()
+
+	# Ugh: factor 2 slowdown
+	# page = re.sub ('@MAIN@', main, page_template)
+	i = string.index (page_template, '@MAIN@')
+	page = page_template[:i] + main + page_template[i+6:]
+
+	page = re.sub ('@LOCATION@', location, page)
+	page = re.sub ('@MENU@', menu, page)
+	page = re.sub ('@SCRIPT@', script, page)
+	page = re.sub ('@TITLE@', titles[-1], page)
+	
+	page = re.sub ('@DEPTH@', root_url, page)
+	page = re.sub ('@DOC@', os.path.join (root_url, '../doc/'), page)
+	page = re.sub ('@IMAGES@', os.path.join (root_url, 'images/'), page)
+	page = re.sub ('@([-A-Za-z]*.ihtml)@', grab_ihtml, page)
+	page = re.sub ('_@([^@]*)@', grab_gettext, page)
+	page = re.sub ('\$\Date: (.*) \$', '\\1', page)
+
+	rel_name = string.join (string.split (file_name, '/')[1:], '/')
 	available = filter (lambda x: lang != x[0] \
 			    and os.path.exists (os.path.join (x[0], rel_name)),
 			    LANGUAGES)
 
 	language_menu = ''
-	for prefix, name in available:
+	for (prefix, name) in available:
 		lang_file = file_lang (base_name, prefix)
 		language_menu += '<a href="%(lang_file)s">%(name)s</a>' % vars ()
 	# Disable language selection until we have something useful.
 	if lang == 'site':
 		language_menu = ''
 
-	page = header % {
-		'depth': depth_str,
-		'title': titles[-1],
-		'script': script,
-		} + menu + main + nav_str ### + language_menu + footer
+	###page = PAGE_TEMPLATE % vars ()
 
 	lang_dir = dir_lang (dir, lang)
 	def langify_url (match):
@@ -362,22 +278,44 @@ def do_one_file (in_file_name, out_file_name, lang):
 		page = re.sub ('''href=[\'"]([^/][^:\'"]*)[\'"]''',
 			       langify_url, page)
 
-	page += language_menu + footer
+	# Must add language menu after url langification
+	languages = LANGUAGES_TEMPLATE % language_menu
+	page = re.sub ('@LANGUAGES@', languages, page)
+
+	return page
+
+
+def do_file (file_name):
+	if verbose:
+		sys.stderr.write ('%s...\n' % file_name)
+	lang = string.split (file_name, '/')[0]
+	if lang == 'site':
+		out_file_name = file_name
+	else:
+		out_file_name = file_lang (dir_lang (file_name, 'site'), lang)
+	out_file_name = os.path.join (outdir, out_file_name)
+
+	if file_name == out_file_name:
+		raise 'cowardly resisting to overwrite source: ' + file_name
+
+	html = open (file_name).read ()
+	page = format_page (html, file_name, lang)
 	open (out_file_name, 'w').write (page)
-
-
+	
 def do_options ():
-	global outdir
+	global outdir, verbose
 	(options, files) = getopt.getopt (sys.argv[1:],
 					  '',
-					  ['outdir=', 'help']) 
+					  ['outdir=', 'help', 'verbose']) 
 	for (o, a) in options:
 		if o == '--outdir':
 			outdir = a
+		elif o == '--verbose':
+			verbose = 1
 		elif o == '--help':
 			sys.stdout.write (r'''
 Usage:
-format-page --outdir=DIRECTORY
+format-page --outdir=DIRECTORY [--verbose]
 
 This script is licensed under the GNU GPL
 ''')
@@ -389,16 +327,13 @@ This script is licensed under the GNU GPL
 def main ():
 	files = do_options ()
 
-	for f in files:
-		sys.stderr.write ('%s...\n' % f)
-		lang = string.split (f, '/')[0]
-		if lang == 'site':
-			o = f
-		else:
-			o = file_lang (dir_lang (f, 'site'), lang)
-		o = os.path.join (outdir, o)
-		do_one_file (f, o, lang)
+	global PAGE_TEMPLATE
+	f = os.path.join (dir_lang ('', 'site'), 'template.ihtml')
+	if os.path.isfile (f):
+		PAGE_TEMPLATE = open (f).read ()
 
+	for i in files:
+		do_file (i)
 
 if __name__ == '__main__':
 	main ()
